# wsd-tiny-aya

./: .gitignore  README.md  prompt_inspiration.md  pyproject.toml
llmwsd-test/FT/: test-de.data.xml.gen.jsonl  test-de.data.xml.ml.jsonl  test-en.data.xml.gen.jsonl  test-es.data.xml.gen.jsonl  test-es.data.xml.ml.jsonl  test-fr.data.xml.gen.jsonl  test-fr.data.xml.ml.jsonl  test-it.data.xml.gen.jsonl  test-it.data.xml.ml.jsonl
llmwsd-test/TT/: test-de.data.xml.gen.jsonl  test-de.data.xml.ml.jsonl  test-es.data.xml.gen.jsonl  test-es.data.xml.ml.jsonl  test-fr.data.xml.gen.jsonl  test-fr.data.xml.ml.jsonl  test-it.data.xml.gen.jsonl  test-it.data.xml.ml.jsonl
llmwsd-test/llmwsd_results_global/: test-de.data.xml.ml.tiny-aya-global.predictions.jsonl  test-en.data.xml.ml.tiny-aya-global.predictions.jsonl  test-es.data.xml.ml.tiny-aya-global.predictions.jsonl  test-fr.data.xml.ml.tiny-aya-global.predictions.jsonl  test-it.data.xml.ml.tiny-aya-global.predictions.jsonl
llmwsd-test/llmwsd_results_water/: test-de.data.xml.ml.tiny-aya-water.predictions.jsonl  test-en.data.xml.ml.tiny-aya-water.predictions.jsonl  test-es.data.xml.ml.tiny-aya-water.predictions.jsonl  test-fr.data.xml.ml.tiny-aya-water.predictions.jsonl  test-it.data.xml.ml.tiny-aya-water.predictions.jsonl
src/: aya.py  scorer.py  xlwsd.py
xl-wsd/structured_data/: processing_summary.json  test-bg.jsonl  test-ca.jsonl  test-da.jsonl  test-de.jsonl  test-en-coarse.jsonl  test-en.jsonl  test-es.jsonl  test-et.jsonl  test-eu.jsonl  test-fr.jsonl  test-gl.jsonl  test-hr.jsonl  test-hu.jsonl  test-it.jsonl  (+5 more)
