[project]
name = "expedition-tiny-aya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "babelnet>=1.2.0",
    "cohere>=5.20.7",
    "diskcache>=5.6.3",
    "lxml>=6.0.2",
    "python-dotenv>=1.2.2",
    "requests-cache>=1.3.1",
    "rick>=0.8.2",
    "types-lxml>=2026.2.16",
]

[dependency-groups]
dev = [
    "ipython>=9.11.0",
    "ruff>=0.15.6",
    "ty>=0.0.22",
]
